NetBSD Problem Report #18026
Received: (qmail 22232 invoked by uid 605); 22 Aug 2002 00:31:50 -0000
Message-Id: <200208220031.g7M0VVP00399@osprey.buzzard.freeserve.co.uk>
Date: Thu, 22 Aug 2002 01:31:31 +0100 (BST)
From: Richard Earnshaw <rearnsha@buzzard.freeserve.co.uk>
Sender: gnats-bugs-owner@netbsd.org
Reply-To: rearnsha@buzzard.freeserve.co.uk
To: gnats-bugs@gnats.netbsd.org
Subject: Cats kernel won't dump to swap on panic
X-Send-Pr-Version: 3.95
>Number: 18026
>Category: port-cats
>Synopsis: Cats kernel won't dump to swap on panic
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: port-cats-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Thu Aug 22 00:32:01 +0000 2002
>Closed-Date: Tue Jan 01 14:14:24 +0000 2008
>Last-Modified: Tue Jan 01 14:15:02 +0000 2008
>Originator: Richard Earnshaw
>Release: NetBSD 1.6F (2002/08/21)
>Organization:
none
>Environment:
System: NetBSD osprey.buzzard.freeserve.co.uk 1.6F NetBSD 1.6F (OSPREY) #44: Wed Aug 21 20:59:30 BST 2002 rearnsha@osprey.buzzard.freeserve.co.uk:/usr/src/sys/arch/cats/compile/OSPREY cats
Architecture: arm
Machine: cats
>Description:
After a panic, typing sync, or trying to continue, hangs the machine
without dumping a kernel to the swap partition.
>How-To-Repeat:
Make the kernel panic, type either 'sync' or 'c' machine will try to
sync disks and dump the kernel to swap, but will instead hang,
requiring a machine reset.
>Fix:
Unknown.
>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->feedback
State-Changed-By: chris
State-Changed-When: Mon Mar 31 11:43:40 PST 2003
State-Changed-Why:
I altered the code to dump cores, it seems to dump a core, although
savecore doesn't find it yet. But that's a seperate PR I think.
From: Richard Earnshaw <rearnsha@buzzard.freeserve.co.uk>(by way of Erik\
E. Fair)
To: NetBSD GNATS Problem Report Tracking System <gnats-bugs@gnats.netbsd.org>
Cc:
Subject: Re: port-cats/18026
Date: Thu, 12 Jun 2003 11:41:26 -0700
> Synopsis: Cats kernel won't dump to swap on panic
>
> State-Changed-From-To: open->feedback
> State-Changed-By: chris
> State-Changed-When: Mon Mar 31 11:43:40 PST 2003
> State-Changed-Why:
> I altered the code to dump cores, it seems to dump a core, although
>savecore doesn't find it yet. But that's a seperate PR I think.
>
Hmm, current (as of about late may) doesn't seem to be able to dump at
all. Every time I type "sync" at the ddb prompt the machine just freezes
and I have to press reset. This happens both after a panic and after
breaking into the kernel with CTRL-ALT-ESC.
R.
State-Changed-From-To: feedback->open
State-Changed-By: fair
State-Changed-When: Mon Mar 29 23:24:59 UTC 2004
State-Changed-Why:
Feedback was provided ages ago - this is still an open issue.
State-Changed-From-To: open->analyzed
State-Changed-By: chris@netbsd.org
State-Changed-When: Sat, 25 Aug 2007 19:23:35 +0000
State-Changed-Why:
I've looked into the bug further. I've posted a patch and details to:
http://mail-index.netbsd.org/port-cats/2007/08/25/0000.html
From: Chris Gilbert <chris@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: PR/18026 CVS commit: src/sys/arch/arm/footbridge
Date: Fri, 14 Dec 2007 11:08:04 +0000 (UTC)
Module Name: src
Committed By: chris
Date: Fri Dec 14 11:08:04 UTC 2007
Modified Files:
src/sys/arch/arm/footbridge: dc21285reg.h footbridge.c footbridge_pci.c
Log Message:
Fix for PR cats/18026.
cats was never able to dump a kernel core dump because reading from
VGA addresses (0xb8000) was causing the system to hang.
To workaround this reprogram the footbridge to map the memory to appear on
the PCI bus at 0x20000000, rather than at 0x0. Also configure the pci bus
to have a DMA range so that data is mapped correctly.
Note that -current kernels seem to hang when unmounting the fs. This
is a seperate issue, and appears to be because interrupts need to be
enabled to unmount filesystems.
So using reboot 0x104 does work, as it does a sync without unmounting the
filesystems.
Also arm savecore doesn't do anything with the memroy dump, as on arm we
currently just dump the raw memory, there's no header block to indicate
memory sizes or other useful information.
To generate a diff of this commit:
cvs rdiff -r1.4 -r1.5 src/sys/arch/arm/footbridge/dc21285reg.h
cvs rdiff -r1.17 -r1.18 src/sys/arch/arm/footbridge/footbridge.c
cvs rdiff -r1.13 -r1.14 src/sys/arch/arm/footbridge/footbridge_pci.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: Chris Gilbert <chris@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: PR/18026 CVS commit: src/sys/arch/arm
Date: Tue, 1 Jan 2008 14:06:43 +0000 (UTC)
Module Name: src
Committed By: chris
Date: Tue Jan 1 14:06:43 UTC 2008
Modified Files:
src/sys/arch/arm/arm32: locore.S mem.c pmap.c stubs.c
src/sys/arch/arm/include: Makefile
src/sys/arch/arm/include/arm32: pmap.h
Added Files:
src/sys/arch/arm/include: kcore.h
Log Message:
Add support for kcore headers to arm32 kernel core dumps.
The kcore code is based on i386's kcore header handling.
Having an asm stub for dumpsys, to dump the registers onto the stack, and
then call the C code to do the memory dump is based on amd64's core dump
code.
This allows a successful core dump on cats.
Part of fixing PR cats/18026.
To generate a diff of this commit:
cvs rdiff -r1.18 -r1.19 src/sys/arch/arm/arm32/locore.S
cvs rdiff -r1.19 -r1.20 src/sys/arch/arm/arm32/mem.c
cvs rdiff -r1.169 -r1.170 src/sys/arch/arm/arm32/pmap.c
cvs rdiff -r1.17 -r1.18 src/sys/arch/arm/arm32/stubs.c
cvs rdiff -r1.34 -r1.35 src/sys/arch/arm/include/Makefile
cvs rdiff -r0 -r1.1 src/sys/arch/arm/include/kcore.h
cvs rdiff -r1.83 -r1.84 src/sys/arch/arm/include/arm32/pmap.h
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: analyzed->closed
State-Changed-By: chris@netbsd.org
State-Changed-When: Tue, 01 Jan 2008 14:14:24 +0000
State-Changed-Why:
cats is now able to successfully dump kernel core dumps in -current.
From: Chris Gilbert <chris@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: PR/18026 CVS commit: src/lib/libkvm
Date: Tue, 1 Jan 2008 14:10:37 +0000 (UTC)
Module Name: src
Committed By: chris
Date: Tue Jan 1 14:10:37 UTC 2008
Modified Files:
src/lib/libkvm: kvm_arm.c
Log Message:
Update libkvm to be able to deal with arm kernel core dumps.
These changes allow savecore to successfully save a kernel core dump.
Final part of fixing PR cats/18026
To generate a diff of this commit:
cvs rdiff -r1.2 -r1.3 src/lib/libkvm/kvm_arm.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.